# Cyberphysical-RoboCup-Soccer-Teams

./: .gitignore  README.md
behaviour_algorithm/rcss2d-opp-imitation-main/: LICENSE  README.md
behaviour_algorithm/rcss2d-opp-imitation-main/db/: gen_dataset_indarch.sql  setup_pg_v1_data.sql
behaviour_algorithm/rcss2d-opp-imitation-main/logs-to-tables/: collect.sh  extractRCG.sh  extractRCL.sh
behaviour_algorithm/rcss2d-opp-imitation-main/tasks/: rcss2d.py  utils.py
behaviour_algorithm/rcss2d-opp-imitation-main/tasks/v1/analysis/: dataset_exploration.ipynb
behaviour_algorithm/rcss2d-opp-imitation-main/tasks/v1/cli/: cli.py
behaviour_algorithm/rcss2d-opp-imitation-main/tasks/v1/data/: preparation.py
behaviour_algorithm/rcss2d-opp-imitation-main/tasks/v1/experiments/: v1_0_0.py  v1_0_x.py
behaviour_algorithm/rcss2d-opp-imitation-main/tests/: test_extract_raw_feature.py
behaviour_algorithm/rcss2d-opp-imitation-main/tests/data/: test.dash.csv  test.kick.csv  test.turn.csv
environment/2d-environment/rcssmonitor-19.0.1/: CMakeLists.txt
environment/2d-environment/rcssmonitor-19.0.1/rcss/rcg/: CMakeLists.txt  parser.cpp
environment/2d-environment/rcssmonitor-19.0.1/src/: disp_holder.cpp
environment/2d-environment/rcssserver-19.0.0/: CMakeLists.txt
environment/2d-environment/starter-stack/: makeFirstTime.sh
environment/2d-environment/starter-stack/.circleci/: config.yml
environment/2d-environment/starter-stack/Agent/: config.h.in~  configure~
environment/2d-environment/starter-stack/Agent/src/: bhv_basic_move.cpp  player-4players.conf  sample_player.cpp  sample_player.h  start-4players.sh
rcss2d-opp-imitation-main/: cli.py  pyproject.toml
rcss2d-opp-imitation-main/db/: clean_pg_v1.sql  pg_v1_auxiliary.sql  pg_v1_optimizations.sql  setup_pg_v1.sql
rcss2d-opp-imitation-main/logs-to-tables/: reorgExtracted.sh
rcss2d-opp-imitation-main/tasks/v1/: types.py
rcss2d-opp-imitation-main/tasks/v1/analysis/: results.ipynb
rcss2d-opp-imitation-main/tasks/v1/cli/: utils.py
rcss2d-opp-imitation-main/tasks/v1/data/: utils.py
rcss2d-opp-imitation-main/tasks/v1/experiments/: v1_0_1.py  v1_0_2.py
rcss2d-opp-imitation-main/tests/data/: test.dash.csv  test.match.csv  test.playerparams.csv  test.playertypes.csv  test.serverparams.csv  test.tackle.csv
