[tool.poetry]
authors = ["Felipe Vieira Coimbra"]
description = "Research on the use of Deep Imitation Learning to obtain models of opponent behavior in the RoboCup Soccer Simulation 2D League by the Laboratory of Autonomous Computational Systems, Aeronautics Instute of Technology, Brazil."
maintainers = ["itandroids-soccer2d@googlegroups.com"]
name = "rcss2d-opp-imitation"
license = "Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/itandroids/open-projects/rcss2d-opp-imitation"
version = "1.0.3"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
python-nubia = "^0.2b5"
termcolor = "^1.1.0"
pandas = "^1.2.4"
psycopg2 = "^2.9.1"
tensorflow = "^2.6.0"
tensorflow-io = "^0.21.0"
ipykernel = "^6.5.0"
seaborn = "^0.11.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
mypy = "^0.812"
pytest-asyncio = "^0.15.1"
nbdime = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
